--- a/src/app/features/business-user/components/business-review-sidebar/business-review-sidebar.html
+++ b/src/app/features/business-user/components/business-review-sidebar/business-review-sidebar.html
@@ -143,7 +143,7 @@
       Want to submit a new request for QC review? You're in the right place!
     </p>
 
-    <button class="card-button" (click)="onCreateRequest()">
+    <button class="card-button" (click)="onSubmitRequest()">
       Create
     </button>
   </div>
