added guard and some enhancements

--- a/src/app/features/admin-user/components/admin-add-team/admin-add-team.html
+++ b/src/app/features/admin-user/components/admin-add-team/admin-add-team.html
@@ -3,11 +3,11 @@
   <div class="page-header">
     <div class="page-header-container">
       <h1 class="page-title">Add New Team</h1>
-      <div class="breadcrumb">
+      <!-- <div class="breadcrumb">
         <span class="breadcrumb-item">Dashboard</span>
         <span class="breadcrumb-separator">></span>
         <span class="breadcrumb-item active">Add Team</span>
-      </div>
+      </div> -->
     </div>
     <span class="last-refresh">Last Refresh: Today, 07:45 AM</span>
   </div>
