--- a/src/app/features/admin-user/components/admin-teams/admin-teams.html
+++ b/src/app/features/admin-user/components/admin-teams/admin-teams.html
@@ -3,13 +3,13 @@
   <div class="page-header">
     <div class="page-header-container">
       <h1 class="page-title">User Management</h1>
-      <div class="breadcrumb">
+      <!-- <div class="breadcrumb">
         <span class="breadcrumb-item">Dashboard</span>
         <span class="breadcrumb-separator">></span>
         <span class="breadcrumb-item">Admin</span>
         <span class="breadcrumb-separator">></span>
         <span class="breadcrumb-item active">Need Review</span>
-      </div>
+      </div> -->
     </div>
     <span class="last-refresh">Last Refresh: Today, 07:45 AM</span>
   </div>
