--- a/src/app/features/business-user/components/business-request-detail-modal/business-request-detail-modal.html
+++ b/src/app/features/business-user/components/business-request-detail-modal/business-request-detail-modal.html
@@ -251,11 +251,11 @@
         </div>
 
         <!-- Action Buttons -->
-        <div class="action-buttons">
+        <!-- <div class="action-buttons">
           <button class="btn-reject" (click)="openRejectModal()">Reject</button>
           <button class="btn-approve" (click)="openApproveModal()">Approve</button>
-        </div>
-        <app-business-approve-modal
+        </div> -->
+        <!-- <app-business-approve-modal
           *ngIf="showApproveModal"
           (approve)="handleApprove()"
           (cancel)="handleCancel()"
@@ -267,7 +267,7 @@
           (reject)="handleReject($event)"
           (cancel)="handleCancel()"
         >
-        </app-business-reject-modal>
+        </app-business-reject-modal> -->
       </div>
     }
   </div>
