--- a/src/app/features/business-user/components/business-request-details-page/business-request-details-page.html
+++ b/src/app/features/business-user/components/business-request-details-page/business-request-details-page.html
@@ -5,12 +5,12 @@
       <h1 class="dashboard-title">Request Details</h1>
       <span class="last-refresh">Last Refresh: Today, 09:45 AM</span>
     </div>
-    <div class="breadcrumb">
+    <!-- <div class="breadcrumb">
       <span>Dashboard</span>
       <span class="breadcrumb-icon">›</span>
 
       <span class="breadcrumb-active">Home</span>
-    </div>
+    </div> -->
   </div>
 
   <!-- Main Content -->
