--- a/src/app/features/business-user/components/business-requests-page/business-requests-page.html
+++ b/src/app/features/business-user/components/business-requests-page/business-requests-page.html
@@ -7,13 +7,13 @@
         <h1 class="dashboard-title">{{ getPageTitle() }}</h1>
         <span class="last-refresh">Last Refresh: Today, {{ lastRefresh | date: 'short' }}</span>
       </div>
-      <div class="breadcrumb">
+      <!-- <div class="breadcrumb">
         <span>Dashboard</span>
         <span class="breadcrumb-icon">›</span>
         <span>Orders</span>
         <span class="breadcrumb-icon">›</span>
         <span class="breadcrumb-active">All Orders</span>
-      </div>
+      </div> -->
     </div>
 
     <div class="table-section">
