--- a/src/app/features/business-user/components/business-submit-request/business-submit-request.html
+++ b/src/app/features/business-user/components/business-submit-request/business-submit-request.html
@@ -3,9 +3,9 @@
   <div class="page-header">
     <div class="header-left">
       <h1 class="page-title">Submit Request</h1>
-      <div class="breadcrumb">
+      <!-- <div class="breadcrumb">
         <span class="breadcrumb-item">Overview</span>
-      </div>
+      </div> -->
     </div>
     <div class="header-right">
       <span class="last-refresh">Last Refresh: {{ currentTime }}</span>
