--- a/src/app/features/business-user/components/create-request/create-request.html
+++ b/src/app/features/business-user/components/create-request/create-request.html
@@ -3,11 +3,11 @@
   <div class="page-header">
     <div class="header-left">
       <h1 class="page-title">Create New Request</h1>
-      <div class="breadcrumb">
+      <!-- <div class="breadcrumb">
         <span class="breadcrumb-item">Dashboard</span>
         <span class="breadcrumb-separator">▸</span>
         <span class="breadcrumb-item active">New Request</span>
-      </div>
+      </div> -->
     </div>
     <div class="header-right">
       <span class="last-refresh">Last Refresh: {{ currentTime }}</span>
