--- a/src/app/features/qc-user/components/qc-overview/qc-overview.css
+++ b/src/app/features/qc-user/components/qc-overview/qc-overview.css
@@ -9,6 +9,12 @@
   min-height: calc(100vh - 70px);
 }
 
+@media (max-width: 1400px) {
+  .dashboard-container {
+    margin-top: 0px !important;
+  }
+}
+
 .main-content,
 app-requests-page,
 app-request-details-page {
@@ -137,12 +143,6 @@ app-request-details-page {
     background: white;
     padding: 16px;
     border-radius: 20px;
-}
-
-@media (max-width: 1200px) {
-  .dashboard-container {
-    flex-direction: column;
-  }
 }
 
 @media (max-width: 768px) {
