--- a/src/app/layouts/qc-layout/qc-layout.html
+++ b/src/app/layouts/qc-layout/qc-layout.html
@@ -1,5 +1,10 @@
-<app-header 
-  [centerText]="'Dashboard Quality & Migration Portal'" 
-  [showUserInfo]="true">
-</app-header>
-<router-outlet></router-outlet>
+<div class="qc-layout">
+  <app-header
+    [centerText]="'Dashboard Quality & Migration Portal'"
+    [showUserInfo]="true">
+  </app-header>
+
+  <div class="qc-content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
