--- a/src/app/shared/components/header/header.css
+++ b/src/app/shared/components/header/header.css
@@ -1,11 +1,12 @@
 .app-header {
-  padding: 0;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  width: 100%;
+  height: 70px; /* IMPORTANT */
   z-index: 1000;
-  
 }
+
 
 .header-container {
   background-color: #1E7A60;
